Revision history for {{$dist->name}}

{{$NEXT}}

3.101461  2010-05-26 22:34:18 America/New_York

3.101460  2010-05-26 08:14:23 America/New_York
          note required version of Config::MVP::Reader::INI

          require a newer CPAN::Meta::Converter for laxer url validation

3.101450  2010-05-25 18:18:09 America/New_York
          compatibility with Config::MVP v1

          merge test requires into build requires for MakeMaker

          require a newer CPAN::Meta::Converter for custom key downgrades

3.101421  2010-05-22 20:48:10 America/New_York
          note the new version of CPAN::Meta::Converter required

3.101410  2010-05-21 22:17:44 America/New_York
          cope with newest Config::MVP

3.101400  2010-05-20 11:30:41 America/New_York
          ModuleBuild now uses $^X to run Build (Christian Walde)
          
          MakeMaker now uses the "make" program found in Config (Christian
          Walde)

3.101390  2010-05-19 09:15:32 America/New_York
          INCOMPATIBLE CHANGES:

          the as_distmeta method of Prereqs is removed

          the ->prereq method on Dist::Zilla is gone (only prereqs remains)

          distmeta is managed by CPAN::Meta, which expects v2 spec data by
          default

          most Dist::Zilla::Types are gone, now in MooseX::Types::Perl

          OTHER CHANGES:

          META.json and META.yml are now produced by CPAN::Meta

          Dist::Zilla::Prereqs now proxies for CPAN::Meta::Prereqs

          MetaResources supports CPAN Meta Spec version 2, but still works
            with old-style resources as well (Dave Rolsky)

          quote filenames with spaces in MANIFEST (Dave Rolsky)

          Manifest plugin is now a FileGatherer, not an InstallTool

          attempted a fix for `dzil install` on Win32 (RT #57404)

2.101310  2010-05-11 09:02:45 America/New_York
          update_filename arg added to NextRelease
          `dzil new` can now be given a module name instead of dist name